; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_reliable.c_reliable_pid_in_range2.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_reliable.c_reliable_pid_in_range2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i64, i32)* @reliable_pid_in_range2 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @reliable_pid_in_range2(i64 %0, i64 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i64 %0, i64* %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load i64, i64* %6, align 8
  %9 = load i32, i32* %7, align 4
  %10 = zext i32 %9 to i64
  %11 = add nsw i64 %8, %10
  %12 = load i64, i64* %6, align 8
  %13 = icmp sge i64 %11, %12
  br i1 %13, label %14, label %23

14:                                               ; preds = %3
  %15 = load i64, i64* %5, align 8
  %16 = load i64, i64* %6, align 8
  %17 = load i32, i32* %7, align 4
  %18 = zext i32 %17 to i64
  %19 = add nsw i64 %16, %18
  %20 = icmp slt i64 %15, %19
  br i1 %20, label %21, label %22

21:                                               ; preds = %14
  store i32 1, i32* %4, align 4
  br label %35

22:                                               ; preds = %14
  br label %34

23:                                               ; preds = %3
  %24 = load i64, i64* %5, align 8
  %25 = add nsw i64 %24, 2147483648
  %26 = load i64, i64* %6, align 8
  %27 = add nsw i64 %26, 2147483648
  %28 = load i32, i32* %7, align 4
  %29 = zext i32 %28 to i64
  %30 = add nsw i64 %27, %29
  %31 = icmp slt i64 %25, %30
  br i1 %31, label %32, label %33

32:                                               ; preds = %23
  store i32 1, i32* %4, align 4
  br label %35

33:                                               ; preds = %23
  br label %34

34:                                               ; preds = %33, %22
  store i32 0, i32* %4, align 4
  br label %35

35:                                               ; preds = %34, %32, %21
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
